--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.0.7",
     "@prisma/client": "^4.8.0",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.2.3",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
