--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.0.7",
     "@prisma/client": "^4.8.0",
+    "@sentry/nextjs": "^7.38.0",
     "@supabase/auth-helpers-nextjs": "^0.5.2",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.2.3",
